Fixed issue with svg img overflowing container elements in .card_icon at full/tablet resolutions in chromium

--- a/styles.css
+++ b/styles.css
@@ -3239,7 +3239,8 @@ section {
 
 }
 .cardIcon {
-    display: inherit;
+    /* display: inherit; */
+    align-self: center;
 }
 .cardContent {
     flex-grow: 1;
